# skeeper

./: .gitignore  Cargo.toml  README.md  cspell.json
.github/: pull_request_template.md
.github/workflows/: clippy.yml  fmt.yml  test.yml
src/: cli.rs  cli_tests.rs  client.rs  client_tests.rs  commands.rs  commands_tests.rs  display.rs  display_tests.rs  ipc.rs  ipc_tests.rs  lib.rs  main.rs  name_gen.rs  name_gen_tests.rs  paths.rs  paths_tests.rs  runtime_lock.rs  runtime_lock_tests.rs  server.rs  server_tests.rs  session.rs  session_tests.rs  term_guard.rs  term_guard_tests.rs  test_helpers.rs  text.rs  text_tests.rs  tui.rs  tui_tests.rs
src/commands/: attach.rs  attach_tests.rs  bare.rs  bare_tests.rs  detach.rs  detach_tests.rs  kill.rs  kill_tests.rs  list.rs  list_tests.rs  new.rs  new_tests.rs  prune.rs  prune_tests.rs  rename.rs  rename_tests.rs
src/server/: attach.rs  attach_tests.rs  control.rs  control_tests.rs  guards.rs  guards_tests.rs  pty_io.rs  pty_io_tests.rs  signals.rs  signals_tests.rs
src/tui/: multi.rs  single.rs
tests/: cli_commands.rs  control_socket.rs  e2e.rs  e2e_sigterm.rs  handshake.rs  scrollback.rs  server_lifecycle.rs
tests/common/: mod.rs
